--- a/.env.nango.example
+++ b/.env.nango.example
@@ -1,8 +1,8 @@
 # Nango Configuration for Docker Compose
 # Copy this file to .env and update the values below
 
-# REQUIRED: 32-character encryption key (generate with: openssl rand -hex 16)
-NANGO_ENCRYPTION_KEY=REPLACE_WITH_32_CHAR_ENCRYPTION_KEY
+# REQUIRED: BASE64-256BIT-KEY encryption key (generate with: openssl rand -base64 32)
+NANGO_ENCRYPTION_KEY=REPLACE_WITH_BASE64_256BIT_ENCRYPTION_KEY
 
 # Database Configuration (defaults work for local development)
 NANGO_DB_USER=nango
@@ -10,9 +10,9 @@ NANGO_DB_PASSWORD=nango
 NANGO_DB_NAME=nango
 
 # Server URLs (defaults work for local development)
-NANGO_SERVER_URL=http://localhost:3003
+NANGO_SERVER_URL=http://localhost:3005
 NANGO_PUBLIC_SERVER_URL=http://localhost:3000
-SERVER_PORT=3003
+SERVER_PORT=3005
 
 # Optional: Dashboard Authentication (leave empty for no auth in development)
 NANGO_DASHBOARD_USERNAME=
