--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -72,7 +72,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inkeep/agent-framework.git",
+    "url": "git+https://github.com/inkeep/agents.git",
     "directory": "agents-cli"
   }
 }
