--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -84,7 +84,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inkeep/agent-framework.git",
+    "url": "git+https://github.com/inkeep/agents.git",
     "directory": "packages/agents-core"
   }
 }
