--- a/packages/agents-sdk/package.json
+++ b/packages/agents-sdk/package.json
@@ -45,7 +45,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/inkeep/agent-framework.git",
+    "url": "git+https://github.com/inkeep/agents.git",
     "directory": "packages/agents-sdk"
   },
   "keywords": [
