simpler commands for .env files

--- a/agents-manage-api/.env.example
+++ b/agents-manage-api/.env.example
@@ -1,3 +1,14 @@
 ENVIRONMENT=development
 DB_FILE_NAME=file:../local.db
 
+NANGO_SECRET_KEY=
+NANGO_HOST="http://localhost:3050"
+
+# MCP OAuth Configuration
+DEFAULT_OAUTH_CLIENT_ID=mcp-client
+OAUTH_REDIRECT_BASE_URL=http://localhost:3002
+
+# OAuth Client Branding (customize OAuth consent screen)
+OAUTH_CLIENT_NAME=Inkeep Agent Framework
+OAUTH_CLIENT_URI=https://inkeep.com
+OAUTH_CLIENT_LOGO_URI=https://drive.google.com/u/0/drive-viewer/AKGpihaEb-HITgCFwb2Ed6taXROKBL75KOB3LOZezuVqhYPgzrV2MBf6pBHqsDveT_5JMhiEbvDssjxJYeotkRTbl4Ixa49o7EXugLU=s2560
