--- a/agents-run-api/.env.example
+++ b/agents-run-api/.env.example
@@ -1,4 +1,8 @@
 ENVIRONMENT=development
-OPENAI_API_KEY=
 DB_FILE_NAME=file:../local.db
+
+OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
+
+NANGO_SECRET_KEY=
+NANGO_HOST="http://localhost:3050"
