--- a/agents-manage-ui/.env.example
+++ b/agents-manage-ui/.env.example
@@ -3,3 +3,8 @@ NEXT_PUBLIC_INKEEP_MANAGEMENT_API_URL="http://localhost:3002" # URL where inkeep
 NEXT_PUBLIC_INKEEP_EXECUTION_API_URL="http://localhost:3003" # URL where inkeep-execution-api is running
 NEXT_PUBLIC_INKEEP_AUTH_TOKEN=""
 NEXT_PUBLIC_DOCS_BASE_URL=""
+NANGO_SECRET_KEY=
+NEXT_PUBLIC_NANGO_HOST="http://localhost:3050"
+NEXT_PUBLIC_NANGO_CONNECT_BASE_URL="http://localhost:3051"
+SIGNOZ_URL=http://localhost:3080
+SIGNOZ_API_KEY=
