chore: bump package versions

--- a/agents-manage-api/package.json
+++ b/agents-manage-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inkeep/agents-manage-api",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Management API for Inkeep Agent Framework - handles CRUD operations and OAuth",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,7 +22,7 @@
     "@hono/node-server": "^1.14.3",
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-openapi": "^1.0.2",
-    "@inkeep/agents-core": "workspace:*",
+    "@inkeep/agents-core": "workspace:^",
     "@nangohq/node": "^0.66.0",
     "@nangohq/types": "^0.66.0",
     "dotenv": "^17.2.1",
