--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inkeep/agents-cli",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Inkeep CLI tool",
   "type": "module",
   "main": "./dist/index.js",
@@ -34,7 +34,7 @@
     "@ai-sdk/openai": "2.0.11",
     "@babel/parser": "^7.23.0",
     "@babel/types": "^7.23.0",
-    "@inkeep/agents-core": "workspace:*",
+    "@inkeep/agents-core": "workspace:^",
     "@libsql/client": "^0.15.7",
     "ai": "5.0.11",
     "ast-types": "^0.14.2",
