--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@inkeep/agents-manage-ui",
-  "version": "0.1.1",
-  "private": true,
+  "version": "0.1.2",
   "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
     "dev": "next dev -p 3000",
@@ -16,9 +15,9 @@
     "@ai-sdk/react": "2.0.11",
     "@codemirror/lang-json": "^6.0.2",
     "@hookform/resolvers": "^5.2.1",
-    "@inkeep/agents-manage-api": "workspace:*",
-    "@inkeep/agents-run-api": "workspace:*",
-    "@inkeep/agents-core": "workspace:*",
+    "@inkeep/agents-manage-api": "workspace:^",
+    "@inkeep/agents-run-api": "workspace:^",
+    "@inkeep/agents-core": "workspace:^",
     "@inkeep/cxkit-react": "0.0.0-rc-20250905022240",
     "@inkeep/cxkit-react-oss": "0.0.0-rc-20250905022240",
     "@nangohq/frontend": "^0.66.0",
