--- a/packages/agents-sdk/package.json
+++ b/packages/agents-sdk/package.json
@@ -17,7 +17,7 @@
   },
   "clean-package": "./clean-package.config.json",
   "dependencies": {
-    "@inkeep/agents-core": "workspace:*",
+    "@inkeep/agents-core": "workspace:^",
     "nanoid": "^5.1.5",
     "zod": "^4.1.5"
   },
