--- a/biome.json
+++ b/biome.json
@@ -20,6 +20,7 @@
       "!**/drizzle.config.*"
     ],
     "rules": {
+      "recommended": true,
       "suspicious": {
         "noExplicitAny": "off",
         "noArrayIndexKey": "off"
@@ -37,6 +38,12 @@
       },
       "a11y": {
         "useSemanticElements": "warn"
+      },
+      "correctness": {
+        "noUnusedVariables": "off",
+        "noUnusedImports": "warn",
+        "useExhaustiveDependencies": "off",
+        "useJsxKeyInIterable": "warn"
       }
     }
   },
