feat: migrate monorepo from ESLint to Biome (#41)
* chore: remove ESLint configurations and dependencies

* feat: add Biome configurations for all packages

* fix: correct Biome extends paths for top-level packages

--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "dev": "next dev -p 3010",
     "start": "next start",
+    "lint": "biome check",
+    "format": "biome check --write",
     "postinstall": "fumadocs-mdx",
     "generate-openapi": "node scripts/generate-openapi-docs.mjs",
     "validate-link": "node scripts/validate-link.mjs"
@@ -45,13 +47,12 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.4",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/mdx": "^2.0.13",
     "@types/node": "24.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "eslint": "^8",
-    "eslint-config-next": "15.3.4",
     "next-validate-link": "^1.5.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
