--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.4",
+    "@changesets/cli": "^2.29.6",
     "husky": "^9.1.6",
     "lint-staged": "^16.1.5",
     "turbo": "^2.5.5"
