chore: enforce Node.js 22 minimum version across all packages
- Updated all package.json files to require Node.js >=22.0.0
- Ensures consistent runtime environment across the entire codebase
- Aligns with modern Node.js features and security updates

Linear: PRD-4822

--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -59,7 +59,7 @@
     "vitest": "^3.2.4"
   },
   "engines": {
-    "node": ">=20.x"
+    "node": ">=22.0.0"
   },
   "publishConfig": {
     "access": "restricted",
