--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "packageManager": "pnpm@10.10.0",
   "engines": {
-    "node": ">=20.x"
+    "node": ">=22.0.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
