--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -87,5 +87,8 @@
     "tw-animate-css": "^1.3.6",
     "typescript": "^5",
     "vitest": "^3.2.4"
+  },
+  "engines": {
+    "node": ">=22.0.0"
   }
 }
