--- a/agents-ui/package.json
+++ b/agents-ui/package.json
@@ -27,6 +27,9 @@
     "typescript": "~5.9.2",
     "vite": "^7.0.4"
   },
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "publishConfig": {
     "access": "restricted",
     "registry": "https://registry.npmjs.org/"
