fix: run tests sequentially in CI to fix mock isolation issues
- Add CI-specific vitest configuration with single-threaded execution
- Create run-tests.sh script to detect CI environment
- Update turbo.json to track CI environment for agents-run-api tests
- This prevents race conditions and mock contamination in parallel tests

--- a/turbo.json
+++ b/turbo.json
@@ -34,6 +34,12 @@
       "inputs": ["$TURBO_DEFAULT$", "**/*.{test,spec}.{js,jsx,ts,tsx}"],
       "outputs": ["coverage/**"]
     },
+    "@inkeep/agents-run-api#test": {
+      "dependsOn": ["build"],
+      "inputs": ["$TURBO_DEFAULT$", "**/*.{test,spec}.{js,jsx,ts,tsx}"],
+      "outputs": ["coverage/**"],
+      "env": ["CI"]
+    },
     "@inkeep/agents-cli#test": {
       "dependsOn": ["build"],
       "inputs": ["$TURBO_DEFAULT$", "**/*.{test,spec}.{js,jsx,ts,tsx}"],
