--- a/agents-run-api/package.json
+++ b/agents-run-api/package.json
@@ -15,7 +15,8 @@
     "dev:without-bypass": "PORT=3004 INKEEP_AGENTS_RUN_BYPASS_SECRET= vite",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "vitest --run",
+    "test": "./run-tests.sh",
+    "test:ci": "vitest --run --config vitest.config.ci.ts",
     "test:watch": "vitest",
     "test:coverage": "vitest --run --coverage",
     "typecheck": "tsc --noEmit"
