sse transport bug fix

--- a/agents-manage-api/.env.example
+++ b/agents-manage-api/.env.example
@@ -11,4 +11,4 @@ OAUTH_REDIRECT_BASE_URL=http://localhost:3002
 # OAuth Client Branding (customize OAuth consent screen)
 OAUTH_CLIENT_NAME=Inkeep Agent Framework
 OAUTH_CLIENT_URI=https://inkeep.com
-OAUTH_CLIENT_LOGO_URI=https://drive.google.com/u/0/drive-viewer/AKGpihaEb-HITgCFwb2Ed6taXROKBL75KOB3LOZezuVqhYPgzrV2MBf6pBHqsDveT_5JMhiEbvDssjxJYeotkRTbl4Ixa49o7EXugLU=s2560
+OAUTH_CLIENT_LOGO_URI=https://inkeep.com/images/logos/inkeep-logo-blue.svg
