--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agents-docs",
+  "name": "@inkeep/agents-docs",
   "version": "0.1.0",
   "private": true,
   "license": "SEE LICENSE IN LICENSE.md",
