--- a/examples/package.json
+++ b/examples/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "examples",
+  "name": "@inkeep/examples",
   "version": "0.1.0",
   "description": "Example configurations and usage patterns for Inkeep Agent Framework",
   "type": "module",
