fix: Add missing .source directory for agents-docs postinstall script
The fumadocs-mdx postinstall script requires the .source directory to exist
before it can write index.ts. This was causing the optimized workflows to fail
during pnpm install.

--- a/.github/workflows/test-with-merge-queue.yml
+++ b/.github/workflows/test-with-merge-queue.yml
@@ -44,6 +44,12 @@ jobs:
         run: |
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
       
+      # Create necessary directories for postinstall scripts
+      - name: Prepare directories
+        run: |
+          mkdir -p agents-docs/.source
+          touch agents-docs/.source/index.ts
+      
       - name: Setup pnpm cache
         uses: actions/cache@v4
         with:
