--- a/.github/workflows/test-optimized-v2.yml
+++ b/.github/workflows/test-optimized-v2.yml
@@ -61,8 +61,9 @@ jobs:
             **/.turbo
             **/node_modules/.vite
             **/node_modules/.cache
-          key: ${{ runner.os }}-build-${{ github.sha }}
+          key: ${{ runner.os }}-build-${{ hashFiles('**/package.json', '**/pnpm-lock.yaml', 'turbo.json') }}-${{ hashFiles('**/src/**/*.ts', '**/src/**/*.tsx') }}
           restore-keys: |
+            ${{ runner.os }}-build-${{ hashFiles('**/package.json', '**/pnpm-lock.yaml', 'turbo.json') }}
             ${{ runner.os }}-build-
       
       - name: Install dependencies
@@ -127,8 +128,9 @@ jobs:
             **/.turbo
             **/node_modules/.vite
             **/node_modules/.cache
-          key: ${{ runner.os }}-build-${{ github.sha }}
+          key: ${{ runner.os }}-build-${{ hashFiles('**/package.json', '**/pnpm-lock.yaml', 'turbo.json') }}-${{ hashFiles('**/src/**/*.ts', '**/src/**/*.tsx') }}
           restore-keys: |
+            ${{ runner.os }}-build-${{ hashFiles('**/package.json', '**/pnpm-lock.yaml', 'turbo.json') }}
             ${{ runner.os }}-build-
       
       - name: Install dependencies
@@ -192,8 +194,9 @@ jobs:
             **/.turbo
             **/node_modules/.vite
             **/node_modules/.cache
-          key: ${{ runner.os }}-build-${{ github.sha }}
+          key: ${{ runner.os }}-build-${{ hashFiles('**/package.json', '**/pnpm-lock.yaml', 'turbo.json') }}-${{ hashFiles('**/src/**/*.ts', '**/src/**/*.tsx') }}
           restore-keys: |
+            ${{ runner.os }}-build-${{ hashFiles('**/package.json', '**/pnpm-lock.yaml', 'turbo.json') }}
             ${{ runner.os }}-build-
       
       - name: Install dependencies
