fix: Add missing @lezer/highlight dependency to agents-manage-ui
The codemirror-theme-duotone package requires @lezer/highlight as a peer dependency.
This was causing the build to fail on GitHub Actions.

Verified that tests pass locally after adding this dependency.

--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -34,6 +34,7 @@
 		"@inkeep/agents-core": "workspace:^",
 		"@inkeep/cxkit-react": "0.0.0-rc-20250905022240",
 		"@inkeep/cxkit-react-oss": "0.0.0-rc-20250905022240",
+		"@lezer/highlight": "^1.2.1",
 		"@nangohq/frontend": "^0.66.0",
 		"@nangohq/node": "^0.66.0",
 		"@nangohq/types": "^0.66.0",
