fix: Add agents-manage-ui dependency install to test and typecheck jobs
The test job was failing because it was trying to rebuild agents-manage-ui
(due to Turborepo's task dependencies) but didn't have the proper
@lezer/highlight dependency installed.

Added the same explicit install step for agents-manage-ui to both test
and typecheck jobs to ensure consistency across all jobs.

--- a/.github/workflows/test-optimized-v2.yml
+++ b/.github/workflows/test-optimized-v2.yml
@@ -139,7 +139,10 @@ jobs:
             ${{ runner.os }}-build-v5-
       
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          pnpm install --frozen-lockfile
+          # Ensure agents-manage-ui dependencies are properly installed
+          cd agents-manage-ui && pnpm install --frozen-lockfile && cd ..
       
       - name: Clean database files
         run: |
@@ -211,7 +214,10 @@ jobs:
             ${{ runner.os }}-build-v5-
       
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          pnpm install --frozen-lockfile
+          # Ensure agents-manage-ui dependencies are properly installed
+          cd agents-manage-ui && pnpm install --frozen-lockfile && cd ..
       
       - name: Run typecheck
         run: pnpm typecheck
