--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -35,6 +35,7 @@
     "@babel/parser": "^7.23.0",
     "@babel/types": "^7.23.0",
     "@inkeep/agents-core": "workspace:^",
+    "@inkeep/agents-manage-ui": "workspace:^",
     "@libsql/client": "^0.15.7",
     "ai": "5.0.11",
     "ast-types": "^0.14.2",
