--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -2,9 +2,22 @@
 	"name": "@inkeep/agents-manage-ui",
 	"version": "0.1.3",
 	"license": "SEE LICENSE IN LICENSE.md",
+	"main": ".next/standalone/server.js",
+	"exports": {
+		".": "./.next/standalone/server.js",
+		"./package.json": "./package.json"
+	},
+	"files": [
+		".next/standalone"
+	],
+	"publishConfig": {
+		"access": "public",
+		"registry": "https://registry.npmjs.org/"
+	},
 	"scripts": {
 		"dev": "next dev -p 3000",
-		"build": "next build",
+		"build:sync": "cp -r public .next/standalone/agents-manage-ui && mkdir -p .next/standalone/agents-manage-ui/.next/ && cp -r .next/static .next/standalone/agents-manage-ui/.next/static",
+		"build": "next build && pnpm build:sync",
 		"start": "next start",
 		"lint": "biome check",
 		"format": "biome check --write",
